--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sonra-book",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://driars.github.io/books-list",
+  "homepage": "https://elite0107.github.io/books-list",
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
@@ -43,7 +43,7 @@
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
